# RockDiscontinuity

./: .gitignore  LICENSE  README.md  clip_images.py  clip_points.py  curvature_filter_voxel_export.py  demo.py  demo_run_all.py  demo_run_all_bak1209.py  demo_run_all_bak20260402.py  demo_run_all_bak260122_detector_supervoxel.py  pyproject.toml  ~$cument-draft.docx  ~$cument_CHN_20251124.docx
SimulateData/: PlanesGenerator_1_mod.py  PlanesGenerator_2_mod.py  PlanesGenerator_3_mod.py  RockCloudCliper.py  tile_point_clouds.py
src/examples/: demo_run_all.py
src/rock_discon_extract/: bak_0108_visualizer.py  bak_0129_visualizer.py  bak_1209_visualizer.py  bak_121012_visualizer.py  bak_1210_visualizer.py  efficient_ransac.py  feature.py  geometry.py  geometry_bak_1208.py  io_pointcloud.py  logging_utils.py  pipeline.py  pointcloud.py  results_exporter.py  results_exporter_bak1208.py  results_exporter_bak1209.py  spatial_structures.py  visualizer.py
src/rock_discon_extract/algorithms/: bak251208_dbfcm_cluster.py  bak251219_detector_supervoxel_original_v1.0.py  bak260112_detector_supervoxel_original_vb1.py  bak260121_detector_supervoxel_current_v1.0.py  base.py  moe.py  (+24 more)
tools/: convert_DSE_data.py  convert_facets_data.py  convert_manual_to_PTv3.py  convert_manual_to_PTv3_bak.py  convert_manual_to_PTv3_new.py  convert_manual_to_PTv3_v1.py  convert_manual_to_PTv3_v2.py  convert_manual_to_PTv3_v3.py  curvature_dbscan_optimize.py  dbscan_for_points_distance.py  download_scannet.py  export_ERansac.py  export_facets.py  merge_manual_segments.py  random_feature_extraction_test.py
(+10 files in other folders)
